<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<include layout="@layout/details_event" />
		<include layout="@layout/details_trigger" />
		<LinearLayout
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="5dip"
			android:layout_width="wrap_content"
			android:id="@+id/dlg_details_item_container">
			<TextView android:text="@string/item_details" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dip" android:textStyle="bold" />
			<TextView android:id="@+id/textview_graph" android:text="@string/no_graph" android:layout_width="wrap_content" android:layout_height="wrap_content" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<Button
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:id="@+id/menuitem_acknowledge"
				android:text="@string/acknowledge_event" />
			<Button
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:id="@+id/btn_show_item_details"
				android:text="@string/show_item_details" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>
