<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/ServerDetailsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/server_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            style="@style/ServerDetailsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/url" />

        <EditText
            android:id="@+id/server_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />

        <TextView
            style="@style/ServerDetailsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/server_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            style="@style/ServerDetailsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/server_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </LinearLayout>

</ScrollView>