<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dlg_details_trigger_container"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="5dip" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trigger_details"
        android:textStyle="bold" >
    </TextView>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/host" >
            </TextView>

            <TextView
                android:id="@+id/trigger_details_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trigger" >
            </TextView>

            <TextView
                android:id="@+id/trigger_details_trigger"
                android:layout_width="190dip"
                android:layout_height="wrap_content"
                android:maxLines="4" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/severity" >
            </TextView>

            <TextView
                android:id="@+id/trigger_details_severity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expression" >
            </TextView>

            <TextView
                android:id="@+id/trigger_details_expression"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disabled" >
            </TextView>

            <TextView
                android:id="@+id/trigger_details_disabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TextView>
        </TableRow>
    </TableLayout>

</LinearLayout>