<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="5dip"
	android:layout_width="wrap_content"
	android:id="@+id/dlg_details_event_container">
	<TextView android:text="@string/event_details" android:id="@+id/dlg_eventdetails_event_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dip" android:textStyle="bold"></TextView>
	<TableLayout android:layout_width="wrap_content" android:id="@+id/dlg_eventdetails_event_table" android:layout_height="wrap_content">
		<TableRow android:id="@+id/tableRow7" android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TextView android:text="@string/time" android:layout_width="100dip" android:layout_height="wrap_content"></TextView>
			<TextView android:text="TextView" android:id="@+id/dlg_eventdetails_tv_time" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		</TableRow>
		<TableRow android:id="@+id/tableRow8" android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TextView android:text="@string/status" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
			<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
				<ImageView android:id="@+id/dlg_eventdetails_img_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ok" android:paddingRight="10dip" />
				<TextView android:text="TextView" android:id="@+id/dlg_eventdetails_tv_status" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
			</LinearLayout>
		</TableRow>
		<TableRow android:id="@+id/tableRow10" android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TextView android:text="@string/acknowledged" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
			<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
				<ImageView android:id="@+id/dlg_eventdetails_img_acknowledged" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ok" android:paddingRight="10dip" />
				<TextView android:text="TextView" android:id="@+id/dlg_eventdetails_tv_acknowledged" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
			</LinearLayout>
		</TableRow>
	</TableLayout>
</LinearLayout>
